2012-05-03	lav

	* file.cc: use memmove to copy overlapping buffers.
	* mouse.cc, user.cc, user.h: add scrolling support.
	* textpoin.cc: don't scan wide chars left, use LineBegin instead.

2011-07-06	lav

	* file.cc: display a better status when selecting a file.
	* user.cc: add .css comments.
	* rus.cc: include config.h
	* edit.h, kern.cc, inline.h: (BlockEq*) new functions.
	* user.cc: support html comments, use BlockEq functions.
	* about.cc, about.h, edit.cc, edit.h: (PrintVersion) new function;
	  show the recommended GNU notice.

2010-11-23	lav

	* loadsave.cc: check for mmap_len overflow;
	  better check for range syntax; better check for open errors;
	  don't create file in mmap mode.
	* edit.h: fix BufferSize and GapSize types.
	* user.cc, edit.cc: don't create file in mmap mode.

2010-11-08	lav

	* keymap.h, keymap.cc, keymapfn.cc, edit.h, ext.cc: (expand-tab-spans) add new function.

2010-03-21	lav

	* options.cc: make fx,fy local (fixes a glitch in nested option dialogs).
	* options.cc: clear message after saving options.
	* user.cc, loadsave.cc, edit.h: allow ranges with mmap (file:off:len).
	* chset.cc: don't use iswprint (buggy), assume all high wchars are printable.
	* about.cc: update copyright.

2009-12-12	lav

	* keymap.cc: limit mouse flush loop (workaround for ncurses bug).

2009-12-12	Raphael Geissert <geissert@debian.org>

	* options.cc: fixed compilation with gcc-4.4.
	* edit.cc: fixed type for btowc return value.

2009-07-10	Raphael Geissert <atomo64@gmail.com>

	* edit.cc: fix a typo.

2009-05-25  lav

	* inline.h, format.cc: fixed auto word wrap.

2009-05-22  lav

	* color.h, color.cc, options.cc: add SYNTAX5, SYNTAX6.

2009-05-19  lav

	* highli.cc: don't interpret \b

2009-05-18  lav

	* screen.cc, color.h: fixes for syntax4.
	* color.cc: fixed default syntax4 color.

2009-05-15  lav

	* highli.cc: handle s without a subex number.
	* color.cc, color.h, options.cc: add syntax4 color.

2008-12-25  lav
